--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stringbuddy",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/anups1ngh/easy-string.git"}
+    "url": "https://github.com/anups1ngh/easy-string.git"
+  }
 }
